IndexedDB: Integer version lost after first open/close/open cycle https://bugs.webkit.org/show_bug.cgi?id=95864

Reviewed by Tony Chang.

Source/WebCore:

New backing stores were being created with an old schema version, causing migration
to occur when the backing store was re-opened, which would overwrite valid integer
version metadata. New backing stores should be created with the latest schema version
since no migration is desired.

Test: storage/indexeddb/intversion-persistence.html

* Modules/indexeddb/IDBLevelDBBackingStore.cpp:
(WebCore::setUpMetadata):

LayoutTests:

Ensure integer versions are persisted across open/close/open cycles.

Note that although this is a useful and valid test in general, the specific bug that
prompted adding this test will only repro if the origin has no pre-existing backing
store, which is not guaranteed by DRT or other shells. See http://webkit.org/b/92166

* storage/indexeddb/intversion-persistence-expected.txt: Added.
* storage/indexeddb/intversion-persistence.html: Added.
* storage/indexeddb/resources/intversion-persistence.js: Added.
(test):
(openFirstTime.request.onupgradeneeded):
(openFirstTime.request.onsuccess):
(openFirstTime):
(openSecondTime.request.onsuccess):
(openSecondTime):


Canonical link: https://commits.webkit.org/113771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127669 268f45cc-cd09-0410-ab3c-d52691b4dbfc